# easey

./: .gitignore  Cargo.toml  README.md
f_generic/: Cargo.toml
f_generic/src/: lib.rs
f_generic/src/functions/: ease_in.rs  ease_in_out.rs  ease_out.rs  inverse.rs  mod.rs  post_delay.rs  pre_delay.rs  square_wave.rs
src/: easey.rs  f32.rs  f64.rs  lib.rs  timing_extensions.rs
src/functions/: ease_in.rs  ease_in_out.rs  ease_out.rs  inverse.rs  minmax.rs  mod.rs  post_delay.rs  pre_delay.rs  square_wave.rs  trigonometry_wave.rs
tests/: minmax.rs  post_delay.rs  pre_delay.rs
timelot/: Cargo.toml
timelot/src/: f64.rs  timing_extensions.rs
timelot/tests/: pre_delay.rs
